--- a/apps.html
+++ b/apps.html
@@ -6,7 +6,7 @@
   <title>Apps</title>
   <meta content="a new android operating system in collaboration with starwars" name="description">
   <meta content="android22,starwars,apps,features,google" name="keywords">
-  <meta content="Martin Zalazar" name="author">
+  <meta content="Arielle Berthe" name="author">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
